--- a/internal/catnipgtk/preferences/preferences.blueprint.ui
+++ b/internal/catnipgtk/preferences/preferences.blueprint.ui
@@ -45,7 +45,7 @@
           </object>
         </child>
         <child>
-          <object class="AdwPreferencesGroup">
+          <object class="AdwPreferencesGroup" id="samplingGroup">
             <property name="title">Sampling</property>
             <property name="description">fₛ ≈ %.1f samples/s, latency ≈ %.1fms</property>
             <style>
@@ -72,7 +72,7 @@
               </object>
             </child>
             <child>
-              <object class="AdwActionRow">
+              <object class="AdwActionRow" id="sampleSizeRow">
                 <property name="title">Sample Size</property>
                 <property name="subtitle">The sample size to record; higher is more accurate but slower.</property>
                 <property name="activatable-widget">sampleSize</property>
@@ -81,10 +81,10 @@
                     <property name="valign">center</property>
                     <property name="adjustment">
                       <object class="GtkAdjustment">
-                        <property name="lower">1</property>
-                        <property name="upper">102400</property>
-                        <property name="value">1024</property>
-                        <property name="step-increment">512</property>
+                        <property name="lower">64</property>
+                        <property name="upper">4096</property>
+                        <property name="value">2048</property>
+                        <property name="step-increment">64</property>
                       </object>
                     </property>
                   </object>
@@ -119,7 +119,7 @@
                       <object class="GtkAdjustment">
                         <property name="lower">0</property>
                         <property name="upper">1</property>
-                        <property name="step-increment">2</property>
+                        <property name="step-increment">0.01</property>
                       </object>
                     </property>
                   </object>
@@ -171,8 +171,8 @@
                     <property name="adjustment">
                       <object class="GtkAdjustment">
                         <property name="lower">0</property>
-                        <property name="upper">100</property>
-                        <property name="step-increment">0.1</property>
+                        <property name="upper">25</property>
+                        <property name="step-increment">1</property>
                       </object>
                     </property>
                   </object>
